fixed the way the about me section is align on smaller screens

--- a/AboutMe.css
+++ b/AboutMe.css
@@ -528,6 +528,48 @@ footer{
   }
 }
 
+@media screen and (max-width:1000px){
+  html{
+    height: 450vh;
+    width:100%;
+  }
+  
+  body{
+    background-color: #1c1c2c;
+    height: 450vh;
+    width:100%;
+  }
+  
+  #filter{
+    background: rgba(10, 10, 10, 0.55);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width:100%;
+    height: 450vh;
+    z-index: -2;
+  }
+  
+  #bg-lines{
+    opacity: .10;
+    position: absolute;
+    height: 450vh;
+    width:100%;
+  }
+  .Me-Section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .paragraph{
+    font-family: SF pro;
+    color: #ffffff;
+    width:650px;
+  }
+  
+}
+
 
 
 @media screen and (max-width:480px){
